# GeoSim

./: CMakeLists.txt  TODO.md
src/: camera.cpp  camera.hpp  drawables.cpp  drawables.hpp  light.cpp  light.hpp  main.cpp  physics.cpp  physics.hpp  player.cpp  player.hpp  shaders.cpp  shaders.hpp  terrain.cpp  terrain.hpp  window.cpp  window.hpp
src/shaders/: 3d_frag.glsl  3d_vert.glsl  colourHills_frag.glsl  phong.glsl
